--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "firebase": "^9.10.0",
     "gsap-trial": "^3.11.0",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
